added game name input to upload api
